--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/mrdavidrobison/Wiki-Viewer.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "david robison",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mrdavidrobison/Wiki-Viewer/issues"
